--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i>Home</a>
+                    <li class="nav-item active"><a class="nav-link" href="index"><i class="fa fa-home fa-lg"></i>Home</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="aboutus.html"><i
                                 class='fa fa-info fa-lg'></i>About</a></li>
@@ -248,6 +248,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
