--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2>A better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-lg btn-info text-nowrap" role="button" href="#reserveForm">Reserve Campsite</a>
+                    <a class="btn btn-lg btn-info text-nowrap" role="button" href="#reserveForm" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>"> Reserve Campsite </a>
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
             </div>
         </div>
     </div>
-    
+
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -183,6 +183,12 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 
 </body>
 
