--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="container">
 
         <div class="row cow-content">
-            <div class="col-md-8 mt-5 mx-auto">   <!--added the data-interval below-->
+            <div class="col-md-8 mt-5 mx-auto">   <!--added the data-interval below in a Change it up challenge, but the script element later in the code now overrides it... leaving it for now just to learn from it-->
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
                     <ol class="carousel-indicators">
                         <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
@@ -197,6 +197,14 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                            <i class="fa fa-pause"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carouselPlay">
+                            <i class="fa fa-play"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -292,11 +300,18 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<!--<script>
+    <script>
         $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script> This comment out breaks my 'Find a trail' tooltip... but it is just for practice anyway-->
+            $(".carousel").carousel( {interval:2000, pause: "false"} );
+            $("#carouselPause").click(function(){
+                $(".carousel").carousel("pause");
+            });
+            $("#carouselPlay").click(function(){
+                $(".carousel").carousel("cycle");
+            });
+    //      $('[data-toggle="tooltip"]').tooltip() This comment out breaks my 'Find a trail' tooltip... but it is just for practice anyway
+        });
+    </script> 
 
 </body>
 
