--- a/index.html
+++ b/index.html
@@ -295,24 +295,7 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script>
-        $(function () {
-            $(".carousel").carousel( {interval:2000, pause: "false"} );
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
-                    $(".carousel").carousel("pause");
-                    $("#carouselButton").children("i").removeClass("fa-pause");
-                    $("#carouselButton").children("i").addClass("fa-play");
-                } else {
-                    $(".carousel").carousel("cycle");
-                    $("#carouselButton").children("i").removeClass("fa-play");
-                    $("#carouselButton").children("i").addClass("fa-pause");
-                }
-            });
-
-        //  $('[data-toggle="tooltip"]').tooltip() This comment out breaks my 'Find a trail' tooltip... but it is just for practice anyway
-        });
-    </script> 
+    <script src="js/scripts.js"></script> 
 
 </body>
 
