--- a/contactus.html
+++ b/contactus.html
@@ -6,14 +6,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-
-        <!-- Additional CSS must be placed after Bootstrap CSS -->
-        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-        <link rel="stylesheet" href="css/styles.css" />
+  <!-- Bootstrap CSS first, then additional CSS must be placed after the Bootstrap CSS -->
+  <!-- build:css css/main.css -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+  <!-- endbuild -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
 
         <title>NuCamp: A Better Way To Camp</title>
     </head>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col">
                         <h1>NuCamp</h1>
-                        <h2>a better way to camp</h2>
+                        <h2>A better way to camp</h2>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="nucampNavbar">
                     <ul class="navbar-nav">
-                        <li class="nav-item active"><a class="nav-link" href="index"><i class="fa fa-home fa-lg"></i>Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class='fa fa-info fa-lg'></i>About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i>Sites</a></li>
                         <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
